fixed the scroll stuck issue on local

--- a/app/globals.css
+++ b/app/globals.css
@@ -13,8 +13,8 @@
 }
 
 body {
-  height: 100%;
-  width: 100%;
+  /* height: 100vh;
+  width: 100%; */
   scroll-behavior: smooth;
   background-color: var(--primary-color);
   color: var(--secondary-color);
